--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "build": "NODE_ENV=production webpack --config  ./webpack/prod.js",
     "lint": "eslint src",
     "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 \"src/**/*.js\"",
-    "format": "npm run prettier && npm run lint -- --fix",
-    "precommit": "npm run format"
+    "format": "npm run prettier && npm run lint -- --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -73,5 +72,10 @@
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-dev-server": "^3.10.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format"
+    }
   }
 }
