添加本地mock及真实fetch请求demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules",
@@ -21,7 +23,8 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    // "configs/**/*"
   ],
   "types": ["typePatches"]
 }
