--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
   "presets":[
-    "@babel/preset-env", "@babel/react"
+    "@babel/preset-env", "@babel/react", "@babel/preset-typescript"
   ],
   "plugins":[
     "@babel/plugin-proposal-class-properties",
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "@babel/transform-runtime"
   ]
 }
