--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.6",
+    "@types/react-router-dom": "^5.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3"
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
+    "whatwg-fetch": "^3.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./webpack/dev",
+    "start": "node ./webpack/dev --bundleSize=false",
+    "start:size": "node ./webpack/dev",
     "dev": "node ./webpack/dev",
-    "build": "NODE_ENV=production webpack --config  ./webpack/prod.js",
+    "build": "NODE_ENV=prod webpack --config  ./webpack/prod.js",
     "lint": "eslint src",
     "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 \"src/**/*.js\"",
     "format": "npm run prettier && npm run lint -- --fix"
@@ -42,9 +46,11 @@
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@babel/runtime": "^7.8.3",
     "autoprefixer": "^9.7.4",
     "awesome-typescript-loader": "^5.2.1",
@@ -60,8 +66,10 @@
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.0.10",
+    "json-loader": "^0.5.7",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.1.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "react-hot-loader": "^4.12.18",
