--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "start": "node ./webpack/dev --bundleSize=false",
     "start:size": "node ./webpack/dev",
     "dev": "node ./webpack/dev",
-    "build": "NODE_ENV=prod webpack --config  ./webpack/prod.js",
+    "build": "NODE_ENV=prod webpack --config ./webpack/prod.js",
     "lint": "eslint src",
-    "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 \"src/**/*.js\"",
+    "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 \"src/**/*.{js,ts,tsx}\"",
     "format": "npm run prettier && npm run lint -- --fix"
   },
   "eslintConfig": {
@@ -69,6 +69,7 @@
     "json-loader": "^0.5.7",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^1.0.0",
     "mockjs": "^1.1.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
@@ -79,6 +80,7 @@
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.10.1"
   },
   "husky": {
