--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,12 @@
 {
-  "presets":[
-    "@babel/preset-env", "@babel/react", "@babel/preset-typescript"
-  ],
-  "plugins":[
+  "presets": ["@babel/preset-env", "@babel/react", "@babel/preset-typescript"],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
     "@babel/plugin-proposal-class-properties",
     "react-hot-loader/babel",
     "@babel/transform-runtime"
