--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-es2015": "^7.0.0-beta.53",
