--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,17 @@
 {
-  "presets": ["@babel/preset-env", "@babel/react", "@babel/preset-typescript"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        // "target": {},
+        "modules": false
+      }
+    ],
+    "@babel/react",
+    "@babel/preset-typescript"
+  ],
   "plugins": [
     [
       "@babel/plugin-proposal-decorators",
