--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
     "@rematch/core": "^1.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,6 +11,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.6",
+    "core-js": "^3.17.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
