增加更新TS配置，rematch及中间件适配TS

--- a/.babelrc
+++ b/.babelrc
@@ -21,6 +21,6 @@
     ],
     "@babel/plugin-proposal-class-properties",
     "react-hot-loader/babel",
-    "@babel/transform-runtime"
+    ["@babel/plugin-transform-runtime", { "corejs": 3 }]
   ]
 }
