--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-rematch-ts",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@rematch/core": "^1.3.0",
+    "@rematch/core": "^2.0.0-next.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -20,14 +20,15 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./webpack/dev --bundleSize=false",
-    "start:size": "node ./webpack/dev --bundleSize=true",
-    "start:mock": "node ./webpack/dev --mock=true",
-    "dev": "node ./webpack/dev",
-    "build": "NODE_ENV=prod webpack --config ./webpack/prod.js",
-    "lint": "eslint src",
-    "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 \"src/**/*.{js,ts,tsx}\"",
-    "format": "npm run prettier && npm run lint -- --fix"
+    "start": "ts-node ./webpack/dev.ts --bundleSize=false",
+    "start:size": "ts-node ./webpack/dev.ts --bundleSize=true",
+    "start:mock": "ts-node ./webpack/dev.ts --mock=true",
+    "dev": "ts-node ./webpack/dev.ts",
+    "build": "NODE_ENV=prod webpack --config ./webpack/prod.ts",
+    "lint": "eslint ./src --quiet",
+    "prettier": "prettier --write --print-width 100 \"src/**/*.{js,ts,tsx}\"",
+    "format": "yarn prettier && yarn lint -- --fix",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,49 +46,58 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-decorators": "^7.12.12",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@babel/runtime": "^7.8.3",
+    "@babel/preset-typescript": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^9.7.4",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.22.0",
+    "css-loader": "^6.4.0",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import-alias": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^4.0.10",
+    "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.4",
     "json-loader": "^0.5.7",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.1.0",
+    "lint-staged": "^11.2.3",
     "mini-css-extract-plugin": "^1.0.0",
     "mockjs": "^1.1.0",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.3.9",
+    "postcss-loader": "^6.2.0",
+    "postcss-preset-env": "^6.7.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
     "react-hot-loader": "^4.12.18",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^1.1.3",
+    "style-loader": "^3.3.0",
     "stylelint": "^13.0.0",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.10.1"
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "typescript": "4.5.4",
+    "webpack": "^5.58.2",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format"
+      "pre-commit": "yarn format"
     }
   },
   "prettier": {
