--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-redux": "^7.1.6",
-    "@types/react-router-dom": "^5.1.6",
-    "core-js": "^3.17.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.2.0",
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.2",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
+    "core-js": "^3.39.0",
+    "dayjs": "^1.11.13",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.1",
     "whatwg-fetch": "^3.4.1"
   },
   "scripts": {
@@ -52,6 +53,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.15.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^9.7.4",
@@ -83,7 +85,7 @@
     "postcss-preset-env": "^6.7.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
-    "react-hot-loader": "^4.12.18",
+    "react-refresh": "^0.16.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^3.3.0",
     "stylelint": "^13.0.0",
@@ -92,8 +94,7 @@
     "typescript": "4.5.4",
     "webpack": "^5.58.2",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^5.2.0"
   },
   "husky": {
     "hooks": {
